# minishell

./: .Makefile.swp  .create_space_around.c.un~  .display.c.swp  .exec_cmd.c.swp  .ft_cd.c.swp  .ft_export.c.swp  .ft_list.c.un~  .ft_strdup.c.swp  .get_env.c.swp  .get_path_command.c.swp  .init_list_env.c.swp  .init_struct.c.swp  .loop_command_pipe.c.swp  .main.c.swp  .parsing.c.swp  .parsing_quotes.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  args_package.c  check_first_command.c  check_prompt.c  close.c  cmake_install.cmake  count_string.c  create_args.c  create_new_str.c  create_space_around.c  display.c  double_quote.c  env.c  exec_cmd.c  export_create_env.c  file.mao  forking.c  free_error.c  free_parsing_line.c  free_parsing_quote.c  (+65 more)
